--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,14 +11,23 @@
     <app-menubar></app-menubar>
 </div>
 
-<div class ="dbouter">
+<div class="dbouter">
+    <div class="dbnav">
+        <button>hi</button>
+        <button>hi</button>
+        <button>hi</button>
+        <button>hi</button>
+    </div>
+    <div class="dbscroll">
+        <div class ="dbinner">
+            <app-dblist>
+            </app-dblist>
+        </div>
+    </div>
     
-    
-    <app-dblist>
-  
-    </app-dblist>
 
 </div>
+
 
 
 
