--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,22 +11,28 @@
     <app-menubar></app-menubar>
 </div>
 
-<div class="dbouter">
-    <div class="dbnav">
-        <button>hi</button>
-        <button>hi</button>
-        <button>hi</button>
-        <button>hi</button>
-    </div>
-    <div class="dbscroll">
-        <div class ="dbinner">
-            <app-dblist>
-            </app-dblist>
+<section class="mainsection">
+    <div class="dbouter">
+        <div class="dbnav">
+            <button>InstallDB</button>
+            <button>DBList</button>
+            <button>Scripts</button>
         </div>
-    </div>
+        <div class="dbscroll">
+            <div class ="dbinner">
+                <app-dblist>
+                </app-dblist>
+            </div>
+        </div>
+        
     
+    </div>
+    <div class="viewarea">
 
-</div>
+    </div>
+</section>
+
+
 
 
 
