--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -1,1 +1,23 @@
-<p>signin works!</p>
+<div class="signincomp">
+    <div class="titlesignin">
+        <div class="titleunder_in">
+            Login
+        </div>
+    </div>
+    <div class="signinfield">
+        <label for="signinuname">Username</label>
+        <input type="text" id="signinuname" name="signinuname" required>
+    </div>
+    <div class="signinfield">
+        <label for="pass">Password</label>
+        <input type="password" name="signinpass" id = "signinpass" required>
+    </div>
+    <div class="navforms">
+        <div class = "navsignup">
+            <button (click)="switchlog()">Signup?</button>
+        </div>
+        <div class = "regform">
+            <button>Login</button>
+        </div>
+    </div>
+</div>
