--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,8 @@
 .dbouter{
-    width: 450px;
+    width: 250px;
     height: 100%;
     background-color: gray;
+    font-size: 15px;
 }
 
 .dbinner{
@@ -14,7 +15,10 @@
 .dbscroll{
     width: 100%;
     height: 100%;
-    overflow-y: scroll;
+}
+
+.dbscroll:hover{
+    overflow-y:scroll;
 }
 
 
@@ -29,14 +33,20 @@
     width: 100%;
     height: 50px;
     background-color: black;
-    border-bottom: white;
-    
+    border-bottom: 1px solid white;
+    border-top: 1px solid white;
 }
 
 .dbnav button{
     background-color: black;
     color: white;
 }
+
+.dbnav button:not(:nth-child(1)){
+    border-left: 1px solid white;
+}
+
+
 
 .dbnav button:hover{
     background-color: white;
