--- a/src/app/versionlist/versionlist.component.html
+++ b/src/app/versionlist/versionlist.component.html
@@ -1,11 +1,6 @@
 <div class = "versionlist">
     <div class="versionbox">
         <input type="text" placeholder="Version">
-        <button (click)="showVersions()">there</button>
     </div>
-    <div *ngFor="let version of versions" class="drpdwnversion">
-        <div class="versionItem">
-            <button (click)="selectVersion()">{{version.name}}</button>
-        </div>
-    </div>
+    <div class=""></div>
 </div>
