--- a/src/app/dblist/dblist.component.scss
+++ b/src/app/dblist/dblist.component.scss
@@ -55,3 +55,12 @@
     border: none;
     border-radius: 5px;
 }
+
+.drpdownver{
+    display: flex;
+    align-items: center;
+    background-color: gray;
+    opacity:.7;
+    height: 100%;
+    width: 50%;
+}
