--- a/src/app/dbtemplate/dbtemplate.component.html
+++ b/src/app/dbtemplate/dbtemplate.component.html
@@ -1,1 +1,11 @@
-<p>dbtemplate works!</p>
+<div class="dbtemp">
+    <div class="dbname"></div>
+    <div class="users">
+        <div class="userentry">
+            <div class="rembtn"><button id="rembtn">Remove</button></div>
+            <div class="username"></div>
+            <div class="username"></div>
+            <div class="username">}</div>
+        </div>
+    </div>
+</div>
