--- a/src/app/menubar/menubar.component.html
+++ b/src/app/menubar/menubar.component.html
@@ -1,22 +1,26 @@
 <div class = "menubar">
-    <div class="menubtns">
-        <div class="menubtn">
-            <button>File</button>
+    <div class="firstsec">
+        <div class="menubtns">
+            <div class="menubtn">
+                <button>File</button>
+            </div>
+            <div class="menubtn">
+                <button>View</button>
+            </div>
+            <div class="menubtn">
+                <button>Tools</button>
+            </div>
+            <div class="menubtn">
+                <button>Help</button>
+            </div>
+            
         </div>
-        <div class="menubtn">
-            <button>View</button>
-        </div>
-        <div class="menubtn">
-            <button>Tools</button>
-        </div>
-        <div class="menubtn">
-            <button>Help</button>
-        </div>
-        
+
     </div>
+    
     <div class="appname"> 
         
-        <p>DB APP</p>
+        <p class="apptitle">UVDB </p>
         
     </div>
 
@@ -34,10 +38,11 @@
     </div>
     <div class="actionbtns">
         <div class="actionbtn">
-            <button id = "minbtn">Minimize</button>
+            <button id = "maxbtn">Min</button>
+            
         </div>
         <div class="actionbtn">
-            <button id = "maxbtn">Maximize</button>
+            <button id = "maxbtn">Max</button>
         </div>
         <div class="actionbtn">
             <button id = "quitbtn">Quit</button>
